--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="box">
         <img src="images/coach1.png" alt="">
         <div class="info">
-            <h3>john deo</h3>
+            <h3>Maher fared</h3>
         </div>
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -196,7 +196,7 @@
     <div class="box">
         <img src="images/gm7.jpg" alt="">
         <div class="info">
-            <h3>john deo</h3>
+            <h3>Maher fared</h3>
         </div>
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -209,7 +209,7 @@
     <div class="box">
         <img src="images/coach3.png" alt="">
         <div class="info">
-            <h3>john deo</h3>
+            <h3>Maher fared</h3>
         </div>
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -222,7 +222,7 @@
     <div class="box">
         <img src="images/coach4.png" alt="">
         <div class="info">
-            <h3>john deo</h3>
+            <h3>Maher fared</h3>
         </div>
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
