--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 <!-- footer section starts  -->
 
 <section class="footer">
-    created by <a href="#">Crowd Digital</a> | all rights reserved.
+    created by <a href="#">Maher Fared</a> | all rights reserved.
 </section>
 
 <!-- footer section ends -->
